--- a/_config.yml
+++ b/_config.yml
@@ -26,9 +26,9 @@ author:
   avatar           : "profile.png"
   name             : "Tala Fakhoury"
   pronouns         : "she/her"  
-  bio              : "Neuroscience, Math, and Existentialism"
+  bio              : "Neuroscience and Existentialism"
   location         : "New York, USA"
-  employer         : "Center for Theoretical Neuroscience, Columbia University"
+  employer         : "Columbia University"
   uri              : # URL
   # email            : "tf2546@columbia.edu" 
 
