--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   caption          : "Prizren, Kosovo. April 2025"
   name             : "Tala Fakhoury"
   pronouns         : "she/her"  
-  bio              : "Neuroscience and Existentialism"
+  bio              : "Neuroscience, Techno, and Existentialism"
   location         : "New York, USA"
   employer         : "Columbia University"
   uri              : # URL
